# guardian

./: .dockerignore  HUGGINGFACE_PITCH.md  README.md  [External] Meta OpenEnv Hackathon Participant Help Guide.docx  __init__.py  client.py  generate_evidence_data.py  kaggle_training_cells.py  make_kaggle_zip.py  models.py  n8n_guardian_workflow.json  openenv.yaml  pilot111 (2).ipynb  pyproject.toml  titanic.ipynb  upload_hf.py  validate_openenv.py
.github/workflows/: ci.yml
guardian/agents/: curriculum_agent.py  guardian_agent.py  worker_agent.py
guardian/checkpoints/episode_80/: adapter_config.json  tokenizer_config.json
guardian/checkpoints/final/: README.md
guardian/data/: eval_scenarios.json  hitl_replay.jsonl  latency_results.json  mcp_persistent_audit.jsonl  reward_breakdown_log.csv  scorecards.jsonl  training_log.jsonl
guardian/data/eval_data/: baseline_gpt4o_mini_zeroshot.json  baseline_naive.json  baseline_random.json
guardian/environment/: adaptation_engine.py  attack_taxonomy.py  guardian_env.py  openenv_wrapper.py  reward_computer.py
guardian/hitl/: __init__.py  escalation.py
guardian/mcp/: __init__.py  domain_servers.py  gateway.py  mock_servers.py  tool_taxonomy.py
guardian/tests/: __init__.py  test_guardian_agent.py  test_reward_computer.py
guardian/training/: elo_tracker.py  episode_runner.py  generate_audit_report.py  latency_benchmark.py  multi_session_tracker.py  pipeline.py  plot_training.py  run_baselines.py  run_demo_episodes.py  run_honest_episodes.py  self_distillation.py  train_grpo.py
outputs/checkpoints/episode_40/: checkpoint_info.json
outputs/checkpoints/episode_80/: checkpoint_info.json
outputs/checkpoints/final/: checkpoint_info.json
outputs/evals/: .gitkeep
outputs/logs/: .gitkeep
server/: Dockerfile  __init__.py  app.py  requirements.txt
